Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.23
-
Fix Version/s: 10.1.24
-
Component/s: Backup
-
Labels:None
-
Environment:mariabackup, 10.1.23
-
Sprint:10.1.24
Description
mariabackup --user=root --copy-back --datadir=/home/mysql/data/mariadb-101 --target-dir=/tmp/backup/full
mariabackup based on MariaDB server 10.1.23-MariaDB Linux (x86_64)
170516 15:25:55 [01] Copying ib_logfile0 to /home/mysql/data/mariadb-101/ib_logfile0
2017-05-16 15:25:55 7f631e8a67c0 InnoDB: Assertion failure in thread 140063690876864 in file os0sync.cc line 377
InnoDB: Failing assertion: event
InnoDB: We intentionally generate a memory trap.
InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
InnoDB: If you get repeated assertion failures or crashes, even
InnoDB: immediately after the mysqld startup, there may be
InnoDB: corruption in the InnoDB tablespace. Please refer to
InnoDB: http://dev.mysql.com/doc/refman/5.6/en/forcing-innodb-recovery.html
InnoDB: about forcing recovery.
170516 15:25:55 [ERROR] mysqld got signal 6 ;
This could be because you hit a bug. It is also possible that this binary
or one of the libraries it was linked against is corrupt, improperly built,
or misconfigured. This error can also be caused by malfunctioning hardware.
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
We will try our best to scrape up some info that will hopefully help
diagnose the problem, but since we have already crashed,
something is definitely wrong and this may fail.
Server version: 10.1.23-MariaDB
key_buffer_size=0
read_buffer_size=131072
max_used_connections=0
max_threads=1
thread_count=0
It is possible that mysqld could use up to
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5297 K bytes of memory
Hope that's ok; if not, decrease some variables in the equation.
Thread pointer: 0x0
Attempting backtrace. You can use the following information to find out
where mysqld died. If you see no messages after this, something went
terribly wrong...
stack_bottom = 0x0 thread_stack 0x48400
mariabackup(my_print_stacktrace+0x2b)[0x7f631e14235b]
mariabackup(handle_fatal_signal+0x4d5)[0x7f631dca1d35]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x10330)[0x7f631d26e330]
/lib/x86_64-linux-gnu/libc.so.6(gsignal+0x37)[0x7f631c07ec37]
/lib/x86_64-linux-gnu/libc.so.6(abort+0x148)[0x7f631c082028]
mariabackup(+0x88f5f4)[0x7f631df305f4]
mariabackup(_Z24xtrabackup_io_throttlingv+0x40)[0x7f631da75c10]
mariabackup(_Z9copy_fileP7ds_ctxtPKcS2_j+0x212)[0x7f631da872f2]
mariabackup(+0x3e9fbc)[0x7f631da8afbc]
mariabackup(_Z9copy_backv+0x257)[0x7f631da8b667]
addr2line: 'mariabackup': No such file
mariabackup(main+0x8dd)[0x7f631da54c4d]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5)[0x7f631c069f45]
mariabackup(+0x3ccc79)[0x7f631da6dc79]
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
information that should help you find out what is causing the crash.
Aborted (core dumped)