MDEV-12814  mariabackup : don't try io throttling in copy-back

Throttling only works with when creating backup.  Attempt to use it with
 --copy-back results in crash, since throttle events are not initialized.
Thus, ignore throttling unless --backup is given.